Finito, this time without deleting my progress

--- a/your-code/pandas_1.ipynb
+++ b/your-code/pandas_1.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "series = pd.Series(lst)\n"
    ]
   },
   {
@@ -64,9 +64,17 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74.4\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(series[2])"
    ]
   },
   {
@@ -98,9 +106,28 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0     1     2     3     4\n",
+      "0  53.1  95.0  67.5  35.0  78.4\n",
+      "1  61.3  40.8  30.8  37.8  87.6\n",
+      "2  20.6  73.2  44.2  14.6  91.8\n",
+      "3  57.4   0.1  96.1   4.2  69.5\n",
+      "4  83.6  20.5  85.4  22.8  35.9\n",
+      "5  49.0  69.0   0.1  31.8  89.1\n",
+      "6  23.3  40.7  95.0  83.8  26.9\n",
+      "7  27.6  26.4  53.8  88.8  68.5\n",
+      "8  96.6  96.4  53.4  72.4  50.1\n",
+      "9  73.7  39.0  43.2  81.6  34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "DF = pd.DataFrame(b)\n",
+    "print(DF)"
    ]
   },
   {
@@ -130,11 +157,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+      "0     53.1     95.0     67.5     35.0     78.4\n",
+      "1     61.3     40.8     30.8     37.8     87.6\n",
+      "2     20.6     73.2     44.2     14.6     91.8\n",
+      "3     57.4      0.1     96.1      4.2     69.5\n",
+      "4     83.6     20.5     85.4     22.8     35.9\n",
+      "5     49.0     69.0      0.1     31.8     89.1\n",
+      "6     23.3     40.7     95.0     83.8     26.9\n",
+      "7     27.6     26.4     53.8     88.8     68.5\n",
+      "8     96.6     96.4     53.4     72.4     50.1\n",
+      "9     73.7     39.0     43.2     81.6     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "DF = pd.DataFrame(b, columns=[\"Score_1\", \"Score_2\", \"Score_3\", \"Score_4\", \"Score_5\"])\n",
+    "\n",
+    "print(DF)"
    ]
   },
   {
@@ -146,11 +193,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_3  Score_5\n",
+      "0     53.1     67.5     78.4\n",
+      "1     61.3     30.8     87.6\n",
+      "2     20.6     44.2     91.8\n",
+      "3     57.4     96.1     69.5\n",
+      "4     83.6     85.4     35.9\n",
+      "5     49.0      0.1     89.1\n",
+      "6     23.3     95.0     26.9\n",
+      "7     27.6     53.8     68.5\n",
+      "8     96.6     53.4     50.1\n",
+      "9     73.7     43.2     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "subset = DF[[\"Score_1\", \"Score_3\", \"Score_5\"]]\n",
+    "print(subset)"
    ]
   },
   {
@@ -162,11 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.95000000000001\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(DF[\"Score_3\"].mean())\n"
    ]
   },
   {
@@ -178,11 +252,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88.8\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(DF[\"Score_4\"].max())\n",
+    "\n"
    ]
   },
   {
@@ -194,11 +277,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.75\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(DF[\"Score_2\"].median())"
    ]
   },
   {
@@ -210,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,11 +322,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          Description  Quantity  UnitPrice  Revenue\n",
+      "0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n",
+      "1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n",
+      "2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n",
+      "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n",
+      "4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n",
+      "5                      POPCORN HOLDER         7       0.85     5.95\n",
+      "6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n",
+      "7                       PARTY BUNTING         4       4.95    19.80\n",
+      "8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n",
+      "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "DF1 = pd.DataFrame(orders)\n",
+    "print(DF1)\n"
    ]
   },
   {
@@ -247,11 +357,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2978\n",
+      "637.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "quantity = DF1[\"Quantity\"].sum()\n",
+    "print(quantity)\n",
+    "revenue = DF1[\"Revenue\"].sum()\n",
+    "print(revenue)"
    ]
   },
   {
@@ -263,11 +385,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.95\n",
+      "0.18\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "most_expensive = DF1[\"UnitPrice\"].max()\n",
+    "print(most_expensive)\n",
+    "least_expensive = DF1[\"UnitPrice\"].min()\n",
+    "print(least_expensive)"
    ]
   },
   {
@@ -279,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,11 +430,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Serial No.  GRE Score  TOEFL Score  University Rating  SOP  LOR   CGPA  \\\n",
+      "0           1        337          118                  4  4.5   4.5  9.65   \n",
+      "1           2        316          104                  3  3.0   3.5  8.00   \n",
+      "2           3        322          110                  3  3.5   2.5  8.67   \n",
+      "3           4        314          103                  2  2.0   3.0  8.21   \n",
+      "4           5        330          115                  5  4.5   3.0  9.34   \n",
+      "\n",
+      "   Research  Chance of Admit   \n",
+      "0         1              0.92  \n",
+      "1         1              0.72  \n",
+      "2         1              0.80  \n",
+      "3         0              0.65  \n",
+      "4         1              0.90  \n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "head = admissions.head()\n",
+    "print(head)\n",
+    "\n"
    ]
   },
   {
@@ -312,11 +468,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "#check if there is no missing values\n",
+    "missing_values = admissions.isna().any().any()\n",
+    "print(missing_values)"
    ]
   },
   {
@@ -328,11 +494,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Serial No.  GRE Score  TOEFL Score  University Rating  SOP  LOR   \\\n",
+      "Serial No.                                                                     \n",
+      "1                    1        337          118                  4  4.5   4.5   \n",
+      "2                    2        316          104                  3  3.0   3.5   \n",
+      "3                    3        322          110                  3  3.5   2.5   \n",
+      "4                    4        314          103                  2  2.0   3.0   \n",
+      "5                    5        330          115                  5  4.5   3.0   \n",
+      "\n",
+      "            CGPA  Research  Chance of Admit   \n",
+      "Serial No.                                    \n",
+      "1           9.65         1              0.92  \n",
+      "2           8.00         1              0.72  \n",
+      "3           8.67         1              0.80  \n",
+      "4           8.21         0              0.65  \n",
+      "5           9.34         1              0.90  \n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "admissions.set_index('Serial No.', drop = False, inplace = True)\n",
+    "print(admissions.head())"
    ]
   },
   {
@@ -351,13 +540,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student. 1 is eligible for admission.\n",
+      "Student. 5 is eligible for admission.\n",
+      "Student. 11 is eligible for admission.\n",
+      "Student. 20 is eligible for admission.\n",
+      "Student. 21 is eligible for admission.\n",
+      "Student. 22 is eligible for admission.\n",
+      "Student. 29 is eligible for admission.\n",
+      "Student. 30 is eligible for admission.\n",
+      "Student. 31 is eligible for admission.\n",
+      "Student. 32 is eligible for admission.\n",
+      "Student. 41 is eligible for admission.\n",
+      "Student. 42 is eligible for admission.\n",
+      "Student. 43 is eligible for admission.\n",
+      "Student. 65 is eligible for admission.\n",
+      "Student. 66 is eligible for admission.\n",
+      "Student. 67 is eligible for admission.\n",
+      "Student. 68 is eligible for admission.\n",
+      "Student. 69 is eligible for admission.\n",
+      "Student. 70 is eligible for admission.\n",
+      "Student. 78 is eligible for admission.\n",
+      "Student. 79 is eligible for admission.\n",
+      "Student. 80 is eligible for admission.\n",
+      "Student. 81 is eligible for admission.\n",
+      "Student. 94 is eligible for admission.\n",
+      "Student. 100 is eligible for admission.\n",
+      "Student. 102 is eligible for admission.\n",
+      "Student. 103 is eligible for admission.\n",
+      "Student. 104 is eligible for admission.\n",
+      "Student. 111 is eligible for admission.\n",
+      "Student. 116 is eligible for admission.\n",
+      "Student. 117 is eligible for admission.\n",
+      "Student. 122 is eligible for admission.\n",
+      "Student. 124 is eligible for admission.\n",
+      "Student. 125 is eligible for admission.\n",
+      "Student. 126 is eligible for admission.\n",
+      "Student. 129 is eligible for admission.\n",
+      "Student. 132 is eligible for admission.\n",
+      "Student. 134 is eligible for admission.\n",
+      "Student. 135 is eligible for admission.\n",
+      "Student. 136 is eligible for admission.\n",
+      "Student. 137 is eligible for admission.\n",
+      "Student. 141 is eligible for admission.\n",
+      "Student. 142 is eligible for admission.\n",
+      "Student. 144 is eligible for admission.\n",
+      "Student. 145 is eligible for admission.\n",
+      "Student. 146 is eligible for admission.\n",
+      "Student. 158 is eligible for admission.\n",
+      "Student. 165 is eligible for admission.\n",
+      "Student. 166 is eligible for admission.\n",
+      "Student. 167 is eligible for admission.\n",
+      "Student. 170 is eligible for admission.\n",
+      "Student. 178 is eligible for admission.\n",
+      "Student. 180 is eligible for admission.\n",
+      "Student. 181 is eligible for admission.\n",
+      "Student. 182 is eligible for admission.\n",
+      "Student. 185 is eligible for admission.\n",
+      "Student. 193 is eligible for admission.\n",
+      "Student. 194 is eligible for admission.\n",
+      "Student. 201 is eligible for admission.\n",
+      "Student. 202 is eligible for admission.\n",
+      "Student. 203 is eligible for admission.\n",
+      "Student. 204 is eligible for admission.\n",
+      "Student. 205 is eligible for admission.\n",
+      "Student. 206 is eligible for admission.\n",
+      "Student. 207 is eligible for admission.\n",
+      "Student. 208 is eligible for admission.\n",
+      "Student. 218 is eligible for admission.\n",
+      "Student. 223 is eligible for admission.\n",
+      "Student. 224 is eligible for admission.\n",
+      "Student. 225 is eligible for admission.\n",
+      "Student. 226 is eligible for admission.\n",
+      "Student. 232 is eligible for admission.\n",
+      "Student. 234 is eligible for admission.\n",
+      "Student. 242 is eligible for admission.\n",
+      "Student. 247 is eligible for admission.\n",
+      "Student. 248 is eligible for admission.\n",
+      "Student. 264 is eligible for admission.\n",
+      "Student. 269 is eligible for admission.\n",
+      "Student. 272 is eligible for admission.\n",
+      "Student. 273 is eligible for admission.\n",
+      "Student. 274 is eligible for admission.\n",
+      "Student. 275 is eligible for admission.\n",
+      "Student. 286 is eligible for admission.\n",
+      "Student. 294 is eligible for admission.\n",
+      "Student. 299 is eligible for admission.\n",
+      "Student. 312 is eligible for admission.\n",
+      "Student. 323 is eligible for admission.\n",
+      "Student. 347 is eligible for admission.\n",
+      "Student. 348 is eligible for admission.\n",
+      "Student. 351 is eligible for admission.\n",
+      "Student. 357 is eligible for admission.\n",
+      "Student. 358 is eligible for admission.\n",
+      "Student. 368 is eligible for admission.\n",
+      "Student. 370 is eligible for admission.\n",
+      "Student. 371 is eligible for admission.\n",
+      "Student. 378 is eligible for admission.\n",
+      "Student. 380 is eligible for admission.\n",
+      "Student. 381 is eligible for admission.\n",
+      "Student. 382 is eligible for admission.\n",
+      "Student. 383 is eligible for admission.\n",
+      "Student. 385 is eligible for admission.\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "for index, row in admissions.iterrows():\n",
+    "    if row[\"CGPA\"] > 9.0 and row[\"Research\"] == 1:\n",
+    "        print(f\"Student. {index} is eligible for admission.\")"
    ]
   },
   {
@@ -369,17 +668,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student. 29 is eligible for admission.\n",
+      "Student. 63 is eligible for admission.\n",
+      "Student. 141 is eligible for admission.\n",
+      "Student. 218 is eligible for admission.\n",
+      "Student. 382 is eligible for admission.\n",
+      "The mean chance of admission for students with CGPA > 9.0 and SOP < 3.5 is:  0.8019999999999999\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "from numpy import mean\n",
+    "\n",
+    "admit_chance = []\n",
+    "for index, row in admissions.iterrows():\n",
+    "    if row[\"CGPA\"] > 9.0 and row[\"SOP\"] < 3.5:\n",
+    "        print(f\"Student. {index} is eligible for admission.\")\n",
+    "        admit_chance.append(row[\"Chance of Admit \"])\n",
+    "mean_admit_chance = mean(admit_chance)\n",
+    "print(\"The mean chance of admission for students with CGPA > 9.0 and SOP < 3.5 is: \", mean_admit_chance)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -393,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.9"
   },
   "toc": {
    "base_numbering": "",
